rename Doc and logs
