# server.js
@@ -14,7 +14,7 @@ app.use(cookieParser());
 app.use(cors({ origin: (origin, callback) => callback(null, true), credentials: true }));
 
 // api routes
-app.use('/accounts', require('./accounts/accounts.controller'));
+app.use('/users', require('./users/users.controller'));
 
 // swagger docs route
 app.use('/api-docs', require('_helpers/swagger'));
