# swagger.yaml
@@ -9,10 +9,10 @@ servers:
     description: Local development server
 
 paths:
-  /accounts/authenticate:
+  /users/authenticate:
     post:
-      summary: Authenticate account credentials and return a JWT token and a cookie with a refresh token
-      description: Accounts must be verified before authenticating.
+      summary: Authenticate user credentials and return a JWT token and a cookie with a refresh token
+      description: Users must be verified before authenticating.
       operationId: authenticate
       requestBody:
         required: true
@@ -32,7 +32,7 @@ paths:
                 - password
       responses:
         "200":
-          description: Account details, a JWT access token and a refresh token cookie
+          description: User details, a JWT access token and a refresh token cookie
           headers:
             Set-Cookie:
               description: "`refreshToken`"
@@ -81,7 +81,7 @@ paths:
                   message:
                     type: string
                     example: "Email or password is incorrect"
-  /accounts/refresh-token:
+  /users/refresh-token:
     post:
       summary: Use a refresh token to generate a new JWT token and a new refresh token
       description: The refresh token is sent and returned via cookies.
@@ -95,7 +95,7 @@ paths:
             example: 51872eca5efedcf424db4cf5afd16a9d00ad25b743a034c9c221afc85d18dcd5e4ad6e3f08607550
       responses:
         "200":
-          description: Account details, a JWT access token and a new refresh token cookie
+          description: User details, a JWT access token and a new refresh token cookie
           headers:
             Set-Cookie:
               description: "`refreshToken`"
@@ -144,10 +144,10 @@ paths:
                   message:
                     type: string
                     example: "Invalid token"
-  /accounts/revoke-token:
+  /users/revoke-token:
     post:
       summary: Revoke a refresh token
-      description: Admin users can revoke the tokens of any account, regular users can only revoke their own tokens.
+      description: Admin users can revoke the tokens of any user, regular users can only revoke their own tokens.
       operationId: revokeToken
       security:
         - bearerAuth: []
@@ -190,10 +190,10 @@ paths:
                     example: "Invalid token"
         "401":
           $ref: "#/components/responses/UnauthorizedError"
-  /accounts/register:
+  /users/register:
     post:
-      summary: Register a new user account and send a verification email
-      description: The first account registered in the system is assigned the `Admin` role, other accounts are assigned the `User` role.
+      summary: Register a new user user and send a verification email
+      description: The first user registered in the system is assigned the `Admin` role, other users are assigned the `User` role.
       operationId: register
       requestBody:
         required: true
@@ -241,9 +241,9 @@ paths:
                   message:
                     type: string
                     example: "Registration successful, please check your email for verification instructions"
-  /accounts/verify-email:
+  /users/verify-email:
     post:
-      summary: Verify a new account with a verification token received by email after registration
+      summary: Verify a new user with a verification token received by email after registration
       operationId: verifyEmail
       requestBody:
         required: true
@@ -259,7 +259,7 @@ paths:
                 - token
       responses:
         "200":
-          description: Verification was successful so you can now login to the account
+          description: Verification was successful so you can now login to the user
           content:
             application/json:
               schema:
@@ -278,9 +278,9 @@ paths:
                   message:
                     type: string
                     example: "Verification failed"
-  /accounts/forgot-password:
+  /users/forgot-password:
     post:
-      summary: Submit email address to reset the password on an account
+      summary: Submit email address to reset the password on a user
       operationId: forgotPassword
       requestBody:
         required: true
@@ -296,7 +296,7 @@ paths:
                 - email
       responses:
         "200":
-          description: The request was received and an email has been sent to the specified address with password reset instructions (if the email address is associated with an account)
+          description: The request was received and an email has been sent to the specified address with password reset instructions (if the email address is associated with a user)
           content:
             application/json:
               schema:
@@ -305,9 +305,9 @@ paths:
                   message:
                     type: string
                     example: "Please check your email for password reset instructions"
-  /accounts/validate-reset-token:
+  /users/validate-reset-token:
     post:
-      summary: Validate the reset password token received by email after submitting to the /accounts/forgot-password route
+      summary: Validate the reset password token received by email after submitting to the /users/forgot-password route
       operationId: validateResetToken
       requestBody:
         required: true
@@ -342,9 +342,9 @@ paths:
                   message:
                     type: string
                     example: "Invalid token"
-  /accounts/reset-password:
+  /users/reset-password:
     post:
-      summary: Reset the password for an account
+      summary: Reset the password for a user
       operationId: resetPassword
       requestBody:
         required: true
@@ -368,7 +368,7 @@ paths:
                 - confirmPassword
       responses:
         "200":
-          description: Password reset was successful so you can now login to the account with the new password
+          description: Password reset was successful so you can now login to the user with the new password
           content:
             application/json:
               schema:
@@ -387,16 +387,14 @@ paths:
                   message:
                     type: string
                     example: "Invalid token"
-  /accounts:
+  /users:
     get:
-      summary: Get a list of all accounts
-      description: Restricted to admin users.
-      operationId: getAllAccounts
-      security:
-        - bearerAuth: []
+      summary: Get a list of all users
+      description: can be accessed by all users
+      operationId: getAllUsers
       responses:
         "200":
-          description: An array of all accounts
+          description: An array of all users
           content:
             application/json:
               schema:
@@ -431,9 +429,9 @@ paths:
         "401":
           $ref: "#/components/responses/UnauthorizedError"
     post:
-      summary: Create a new account
+      summary: Create a new user
       description: Restricted to admin users.
-      operationId: createAccount
+      operationId: createUser
       security:
         - bearerAuth: []
       requestBody:
@@ -474,7 +472,7 @@ paths:
                 - role
       responses:
         "200":
-          description: Account created successfully, verification is not required for accounts created with this endpoint. The details of the new account are returned.
+          description: User created successfully, verification is not required for users created with this endpoint. The details of the new user are returned.
           content:
             application/json:
               schema:
@@ -513,24 +511,24 @@ paths:
                     example: "Email 'Kayode@example.com' is already registered"
         "401":
           $ref: "#/components/responses/UnauthorizedError"
-  /accounts/{id}:
+  /users/{id}:
     parameters:
       - in: path
         name: id
-        description: Account id
+        description: User id
         required: true
         example: "5eb12e197e06a76ccdefc121"
         schema:
           type: string
     get:
-      summary: Get a single account by id
-      description: Admin users can access any account, regular users are restricted to their own account.
-      operationId: getAccountById
+      summary: Get a single user by id
+      description: Admin users can access any user, regular users are restricted to their own user.
+      operationId: getUserById
       security:
         - bearerAuth: []
       responses:
         "200":
-          description: Details of the specified account
+          description: Details of the specified user
           content:
             application/json:
               schema:
@@ -565,9 +563,9 @@ paths:
         "401":
           $ref: "#/components/responses/UnauthorizedError"
     put:
-      summary: Update an account
-      description: Admin users can update any account including role, regular users are restricted to their own account and cannot update role.
-      operationId: updateAccount
+      summary: Update a user
+      description: Admin users can update any user including role, regular users are restricted to their own user and cannot update role.
+      operationId: updateUser
       security:
         - bearerAuth: []
       requestBody:
@@ -600,7 +598,7 @@ paths:
                   enum: [Admin, User]
       responses:
         "200":
-          description: Account updated successfully. The details of the updated account are returned.
+          description: User updated successfully. The details of the updated user are returned.
           content:
             application/json:
               schema:
@@ -635,14 +633,14 @@ paths:
         "401":
           $ref: "#/components/responses/UnauthorizedError"
     delete:
-      summary: Delete an account
-      description: Admin users can delete any account, regular users are restricted to their own account.
-      operationId: deleteAccount
+      summary: Delete a user
+      description: Admin users can delete any user, regular users are restricted to their own user.
+      operationId: deleteUser
       security:
         - bearerAuth: []
       responses:
         "200":
-          description: Account deleted successfully
+          description: User deleted successfully
           content:
             application/json:
               schema:
@@ -650,7 +648,7 @@ paths:
                 properties:
                   message:
                     type: string
-                    example: "Account deleted successfully"
+                    example: "User deleted successfully"
         "404":
           $ref: "#/components/responses/NotFoundError"
         "401":
