# users/users.controller.js
@@ -4,7 +4,7 @@ const Joi = require('joi');
 const validateRequest = require('_middleware/validate-request');
 const authorize = require('_middleware/authorize')
 const Role = require('_helpers/role');
-const accountService = require('./account.service');
+const userService = require('./user.service');
 
 // routes
 router.post('/authenticate', authenticateSchema, authenticate);
@@ -34,10 +34,10 @@ function authenticateSchema(req, res, next) {
 function authenticate(req, res, next) {
     const { email, password } = req.body;
     const ipAddress = req.ip;
-    accountService.authenticate({ email, password, ipAddress })
-        .then(({ refreshToken, ...account }) => {
+    userService.authenticate({ email, password, ipAddress })
+        .then(({ refreshToken, ...user }) => {
             setTokenCookie(res, refreshToken);
-            res.json(account);
+            res.json(user);
         })
         .catch(next);
 }
@@ -45,10 +45,10 @@ function authenticate(req, res, next) {
 function refreshToken(req, res, next) {
     const token = req.cookies.refreshToken;
     const ipAddress = req.ip;
-    accountService.refreshToken({ token, ipAddress })
-        .then(({ refreshToken, ...account }) => {
+    userService.refreshToken({ token, ipAddress })
+        .then(({ refreshToken, ...user }) => {
             setTokenCookie(res, refreshToken);
-            res.json(account);
+            res.json(user);
         })
         .catch(next);
 }
@@ -72,7 +72,7 @@ function revokeToken(req, res, next) {
         return res.status(401).json({ message: 'Unauthorized' });
     }
 
-    accountService.revokeToken({ token, ipAddress })
+    userService.revokeToken({ token, ipAddress })
         .then(() => res.json({ message: 'Token revoked' }))
         .catch(next);
 }
@@ -91,7 +91,7 @@ function registerSchema(req, res, next) {
 }
 
 function register(req, res, next) {
-    accountService.register(req.body, req.get('origin'))
+    userService.register(req.body, req.get('origin'))
         .then(() => res.json({ message: 'Registration successful, please check your email for verification instructions' }))
         .catch(next);
 }
@@ -104,7 +104,7 @@ function verifyEmailSchema(req, res, next) {
 }
 
 function verifyEmail(req, res, next) {
-    accountService.verifyEmail(req.body)
+    userService.verifyEmail(req.body)
         .then(() => res.json({ message: 'Verification successful, you can now login' }))
         .catch(next);
 }
@@ -117,7 +117,7 @@ function forgotPasswordSchema(req, res, next) {
 }
 
 function forgotPassword(req, res, next) {
-    accountService.forgotPassword(req.body, req.get('origin'))
+    userService.forgotPassword(req.body, req.get('origin'))
         .then(() => res.json({ message: 'Please check your email for password reset instructions' }))
         .catch(next);
 }
@@ -130,7 +130,7 @@ function validateResetTokenSchema(req, res, next) {
 }
 
 function validateResetToken(req, res, next) {
-    accountService.validateResetToken(req.body)
+    userService.validateResetToken(req.body)
         .then(() => res.json({ message: 'Token is valid' }))
         .catch(next);
 }
@@ -145,14 +145,14 @@ function resetPasswordSchema(req, res, next) {
 }
 
 function resetPassword(req, res, next) {
-    accountService.resetPassword(req.body)
+    userService.resetPassword(req.body)
         .then(() => res.json({ message: 'Password reset successful, you can now login' }))
         .catch(next);
 }
 
 function getAll(req, res, next) {
-    accountService.getAll()
-        .then(accounts => res.json(accounts))
+    userService.getAll()
+        .then(users => res.json(users))
         .catch(next);
 }
 
@@ -162,8 +162,8 @@ function getById(req, res, next) {
         return res.status(401).json({ message: 'Unauthorized' });
     }
 
-    accountService.getById(req.params.id)
-        .then(account => account ? res.json(account) : res.sendStatus(404))
+    usertService.getById(req.params.id)
+        .then(user => user ? res.json(user) : res.sendStatus(404))
         .catch(next);
 }
 
@@ -181,8 +181,8 @@ function createSchema(req, res, next) {
 }
 
 function create(req, res, next) {
-    accountService.create(req.body)
-        .then(account => res.json(account))
+    userService.create(req.body)
+        .then(user => res.json(user))
         .catch(next);
 }
 
@@ -211,8 +211,8 @@ function update(req, res, next) {
         return res.status(401).json({ message: 'Unauthorized' });
     }
 
-    accountService.update(req.params.id, req.body)
-        .then(account => res.json(account))
+    userService.update(req.params.id, req.body)
+        .then(user => res.json(user))
         .catch(next);
 }
 
@@ -222,8 +222,8 @@ function _delete(req, res, next) {
         return res.status(401).json({ message: 'Unauthorized' });
     }
 
-    accountService.delete(req.params.id)
-        .then(() => res.json({ message: 'Account deleted successfully' }))
+    userService.delete(req.params.id)
+        .then(() => res.json({ message: 'User deleted successfully' }))
         .catch(next);
 }
 
